--- a/seqsal.ipynb
+++ b/seqsal.ipynb
@@ -135,11 +135,13 @@
         "  idx = np.arange(N)\n",
         "  for batch_size, epochs in schedule:\n",
         "    if batch_size == N:\n",
-        "      model.fit(X, X, sample_weight=W, batch_size=batch_size, verbose=verbose, epochs=epochs)\n",
+        "      model.fit(X, X, sample_weight=W,\n",
+        "                batch_size=batch_size,verbose=verbose, epochs=epochs)\n",
         "    else:\n",
         "      for e in range(epochs):\n",
         "        np.random.shuffle(idx)\n",
-        "        model.fit(X[idx], X[idx], sample_weight=W[idx], batch_size=batch_size, verbose=verbose, epochs=1)"
+        "        model.fit(X[idx], X[idx], sample_weight=W[idx],\n",
+        "                  batch_size=batch_size, verbose=verbose, epochs=1)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -572,29 +574,31 @@
           "base_uri": "https://localhost:8080/",
           "height": 590
         },
-        "outputId": "0e5b27fb-0adc-4275-fe72-31edec2ca4a5"
+        "outputId": "324376d2-4644-406f-fa6f-f4309e53ef99"
       },
       "source": [
         "plt.figure(figsize=(15,10))\n",
         "\n",
+        "params = {\"cutoffs\":[0.01,None], \"ss\":[15,2], \"cc\":[\"lightgray\",\"blue\"]}\n",
+        "\n",
         "plt.subplot(2,3,1); plt.title(\"mrf1\"); plt.axis(False)\n",
-        "plot_contact_map([cons, contact_preds[\"mrf1\"]], cutoffs=[0.01,None], ss=[15,2], cc=[\"lightgray\",\"blue\"])\n",
+        "plot_contact_map([cons, contact_preds[\"mrf1\"]], **params)\n",
         "plt.subplot(2,3,4); plt.title(\"mrf2\"); plt.axis(False)\n",
-        "plot_contact_map([cons, contact_preds[\"mrf2\"]], cutoffs=[0.01,None], ss=[15,2], cc=[\"lightgray\",\"blue\"])\n",
+        "plot_contact_map([cons, contact_preds[\"mrf2\"]], **params)\n",
         "\n",
         "plt.subplot(2,3,2); plt.title(\"lae1\"); plt.axis(False)\n",
-        "plot_contact_map([cons, contact_preds[\"lae1\"]], cutoffs=[0.01,None], ss=[15,2], cc=[\"lightgray\",\"blue\"])\n",
+        "plot_contact_map([cons, contact_preds[\"lae1\"]], **params)\n",
         "plt.subplot(2,3,5); plt.title(\"lae2\"); plt.axis(False)\n",
-        "plot_contact_map([cons, contact_preds[\"lae2\"]], cutoffs=[0.01,None], ss=[15,2], cc=[\"lightgray\",\"blue\"])\n",
+        "plot_contact_map([cons, contact_preds[\"lae2\"]], **params)\n",
         "\n",
         "plt.subplot(2,3,3); plt.title(\"vae1\"); plt.axis(False)\n",
-        "plot_contact_map([cons, contact_preds[\"vae1\"]], cutoffs=[0.01,None], ss=[15,2], cc=[\"lightgray\",\"blue\"])\n",
+        "plot_contact_map([cons, contact_preds[\"vae1\"]], **params)\n",
         "plt.subplot(2,3,6); plt.title(\"vae2\"); plt.axis(False)\n",
-        "plot_contact_map([cons, contact_preds[\"vae2\"]], cutoffs=[0.01,None], ss=[15,2], cc=[\"lightgray\",\"blue\"])\n",
+        "plot_contact_map([cons, contact_preds[\"vae2\"]], **params)\n",
         "\n",
         "plt.show()"
       ],
-      "execution_count": 36,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "display_data",
