minor edit to variable name

--- a/seqsal.ipynb
+++ b/seqsal.ipynb
@@ -30,9 +30,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-FMpaHjOoMaH",
-        "colab_type": "code",
-        "colab": {}
+        "id": "-FMpaHjOoMaH"
       },
       "source": [
         "# ------------------------------------------------------------\n",
@@ -46,14 +44,13 @@
         "# -Dylan Marshall, Sergey Ovchinnikov and Peter Koo\n",
         "# ------------------------------------------------------------"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wICZdOirnzKH",
-        "colab_type": "text"
+        "id": "wICZdOirnzKH"
       },
       "source": [
         "#Load Libraries"
@@ -63,7 +60,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "DYDZjtHSgUm1",
-        "colab_type": "code",
         "outputId": "99909e89-3ade-454c-ce09-ecc18a8708cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -85,7 +81,7 @@
         "from tensorflow.keras.regularizers import l2\n",
         "from tensorflow.keras.initializers import Zeros, Constant"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,9 +95,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dNLFMyug6hBb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "dNLFMyug6hBb"
       },
       "source": [
         "import numpy as np\n",
@@ -109,14 +103,13 @@
         "from scipy.stats import spearmanr\n",
         "from scipy.spatial.distance import pdist, squareform"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GquuwTSInWrp",
-        "colab_type": "text"
+        "id": "GquuwTSInWrp"
       },
       "source": [
         "#MODELS\n",
@@ -126,9 +119,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AOEpLDorY4Et",
-        "colab_type": "code",
-        "colab": {}
+        "id": "AOEpLDorY4Et"
       },
       "source": [
         "def train_model(model, X, W, schedule, verbose=False):\n",
@@ -144,14 +135,13 @@
         "        model.fit(X[idx], X[idx], sample_weight=W[idx],\n",
         "                  batch_size=batch_size, verbose=verbose, epochs=1)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5hm4J4oCgW1Q",
-        "colab_type": "text"
+        "id": "5hm4J4oCgW1Q"
       },
       "source": [
         "###MRF"
@@ -160,9 +150,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "--mOOpgzgYj3",
-        "colab_type": "code",
-        "colab": {}
+        "id": "--mOOpgzgYj3"
       },
       "source": [
         "def mrf(X, W, use_bias=False, lam=0.01, train=True):\n",
@@ -221,14 +209,13 @@
         "  \n",
         "  return model"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "u_yGEL9Dg82f",
-        "colab_type": "text"
+        "id": "u_yGEL9Dg82f"
       },
       "source": [
         "###LAE"
@@ -237,9 +224,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dDCwz6Gng8Kn",
-        "colab_type": "code",
-        "colab": {}
+        "id": "dDCwz6Gng8Kn"
       },
       "source": [
         "# Linear Auto-Encoder\n",
@@ -288,14 +273,13 @@
         "  \n",
         "  return model"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5dTbk3hbfn-O",
-        "colab_type": "text"
+        "id": "5dTbk3hbfn-O"
       },
       "source": [
         "## VAE"
@@ -304,9 +288,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3Blmq9GShrSq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "3Blmq9GShrSq"
       },
       "source": [
         "def vae(X, W,\n",
@@ -339,8 +321,8 @@
         "  # latent (Z)\n",
         "  #####################################################\n",
         "  Z_mu = Dense(rank)(E)\n",
-        "  Z_log_sg = Dense(rank)(E)\n",
-        "  Z_sg = Lambda(lambda x: K.exp(0.5 * x))(Z_log_sg)\n",
+        "  Z_log_sg_squared = Dense(rank)(E)\n",
+        "  Z_sg = Lambda(lambda x: K.exp(0.5 * x))(Z_log_sg_squared)\n",
         "  Z = Lambda(lambda x: x[0]+x[1]*K.random_normal(K.shape(x[0])))([Z_mu, Z_sg])\n",
         "  \n",
         "  model_EN    = Model(E_I, Z,    name=\"model_EN\")\n",
@@ -373,21 +355,20 @@
         "  if train:  \n",
         "    def loss(p,q):\n",
         "      RE = K.sum(K.categorical_crossentropy(p,q),-1)\n",
-        "      KL = beta*K.sum(K.square(Z_mu)+K.square(Z_sg)-Z_log_sg-1.0,-1)\n",
+        "      KL = beta*K.sum(K.square(Z_mu)+K.square(Z_sg)-Z_log_sg_squared-1.0,-1)\n",
         "      return RE + KL\n",
         "    model.compile(\"adam\",loss)\n",
         "    train_model(model,X,W,[[64,50],[128,50],[256,50],[512,50],[1024,50],[2048,50]])\n",
         "        \n",
         "  return model_mu"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RU7h1nsDnZFm",
-        "colab_type": "text"
+        "id": "RU7h1nsDnZFm"
       },
       "source": [
         "#OTHER"
@@ -396,9 +377,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EO5Zqp1Znahd",
-        "colab_type": "code",
-        "colab": {}
+        "id": "EO5Zqp1Znahd"
       },
       "source": [
         "def pw_saliency(model):\n",
@@ -472,14 +451,13 @@
         "  plt.gca().set_ylim(plt.gca().get_ylim()[::-1])\n",
         "  plt.axis('equal')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pG0k-bNy9zOk",
-        "colab_type": "text"
+        "id": "pG0k-bNy9zOk"
       },
       "source": [
         "#DATA"
@@ -489,7 +467,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "DOA3OlJGKjs_",
-        "colab_type": "code",
         "outputId": "8553b56f-e0b1-4f08-fad4-da941312f541",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -501,7 +478,7 @@
         "wget -q https://github.com/sokrypton/seqsal/raw/master/data.zip\n",
         "unzip data.zip"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,9 +493,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lPgn1af490iX",
-        "colab_type": "code",
-        "colab": {}
+        "id": "lPgn1af490iX"
       },
       "source": [
         "# prep data\n",
@@ -533,19 +508,18 @@
         "dX = np.eye(21)[data[\"dX\"]] # mutant MSA\n",
         "dY = data[\"dY\"]             # measured fitness"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "I0zx05LXkQdU",
-        "colab_type": "code",
+        "outputId": "c5dc5146-ad27-473f-a13a-a2f2bd9e57d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "c5dc5146-ad27-473f-a13a-a2f2bd9e57d2"
+        }
       },
       "source": [
         "contact_preds = {}\n",
@@ -566,7 +540,7 @@
         "  dY_pssm_sco = sco(dX, model.predict(X[0,None]))\n",
         "  print(k, mut_rank(dY_sco, dY), mut_rank(dY_pssm_sco, dY), con_auc(cons_pred, cons))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,7 +560,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "MjeWsCi3QM8w",
-        "colab_type": "code",
         "outputId": "064940f8-8c00-4560-c7cf-6ddc5f75ce97",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -615,7 +588,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -634,14 +607,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bjEFRedCPpjk",
-        "colab_type": "code",
-        "colab": {}
+        "id": "bjEFRedCPpjk"
       },
       "source": [
         ""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
